--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- Game Over Screen -->
     <div id="game-over-screen">
-        <h1>Game Over!</h1>
+        <h1>You Died!</h1>
         <button onclick="restartGame()">Restart</button>
     </div>
 
