--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Start Screen -->
     <div id="start-screen">
-        <h1>Maze</h1>
+        <h1>Mark's Maze :p</h1>
         <button onclick="startGame()">Start Game</button>
     </div>
 
@@ -25,7 +25,6 @@
     <h1 id="heading"></h1>
     <canvas id="canvas"></canvas>
 
-    <!-- Link to external JavaScript at the end of the body for best practices -->
     <script src="script.js"></script>
 </body>
 </html>
